--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /001 Private-Subnet enabled internet access through NAT-Instance/*.tfstate
 /001 Private-Subnet enabled internet access through NAT-Instance/.terraform/
 /001 Private-Subnet enabled internet access through NAT-Instance/.terraform.lock.hcl
+/001 Private-Subnet enabled internet access through NAT-Instance/terraform.tfstate.backup
